# Biostatistics_fdu_26

./: .gitignore  CONTEXT.md  README.md  README_extensions.md  plan1.md  pyproject.toml  run_all_tasks.R  run_mnist_cnn_graph_mmmd.R
High Dimensional Alternatives/Results/: Figure.R
Local Alternatives/Results/: Figure.R
MMDAggComparison/localpower/: Body.R  Figure.R
MMDAggComparison/mixing probability/: Figure.R
MNIST-Additive Noise/Code/: SetImage.R
MNIST-Additive Noise/Results/: Figure.R
MNIST-Reduced Contrast and AWGN/Code/: MNISTSetImages.R
MNIST-Reduced Contrast and AWGN/Results/: Figure.R
Mixture Alternatives/d = 150/: Figure.R
Mixture Alternatives/d = 30/: Figure.R
Oracle Split MMD/Local/: Body.R  Figure.R
Oracle Split MMD/MixProb/: Body.R  Figure.R
P Value Combinations/Over Mean Vector/: Body.R  ComparingTests.R  Plot.R
R/: bio_loader.R  data_sources.R  graph_kernel.R  load.R  mmmd_core.R  roc_utils.R
data/: README.md
dechao_reproduction/: README.md  run_remaining_cnn_power_pipeline.sh
experiments/: compare_inversion.R  diabetes_comparison.R  diagnose_mmmd_lap.R  diagnose_multi_lap.R  task1_epsilon_sensitivity.R  task2_variance_sensitivity.R  task3_typeI_and_roc.R  task4_graph_demo.R  test_fixed_multi_lap.R
lrj-covariance_matrix/: Covariance_matrix.md  draft.md
lrj/PathMNIST/: smoke.py  (+6 more)
results_data/: short_method_note.md
results_diabetes/: FIX_NOTES.md  README.md  power_vs_sample_size.csv
yao/: .gitignore  README.md  requirements.txt
zzh/: README.md  README_extensions.md  plot_graph_mmmd_vs_existing.R  run_graph_demo.R
(+752 files in other folders)
