[project]
name = "biostatistics-fdu-26"
version = "0.1.0"
description = "Shared Python environment for kernel two-sample testing reproductions and embedding MMMD experiments."
requires-python = ">=3.11,<3.13"
dependencies = [
  "matplotlib>=3.8",
  "medmnist>=3.0.0",
  "numpy>=1.26",
  "pandas>=2.2",
  "pillow>=10",
  "scikit-learn>=1.4",
  "scipy>=1.12",
  "torch>=2.2",
  "torchvision>=0.17",
  "tqdm>=4.66",
  "transformers>=4.40",
]

[tool.uv]
package = false
